Ebook layout issues

--- a/src/static/css/ebook.css
+++ b/src/static/css/ebook.css
@@ -73,6 +73,10 @@
   padding: 0;
 }
 
+.large-table td {
+  padding: 0.2rem;
+}
+
 th {
   padding: 0.75rem;
   text-align: center;
@@ -197,7 +201,7 @@ tbody tr:nth-child(even) {
   page-break-inside: avoid;
 }
 
-.code-block pre {
+pre {
   overflow: visible;
   white-space: pre-wrap;
 }
